--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav">
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
+                <a class="nav-link" href="{% url 'list' %}">Posts</a>
+                <a class="nav-link" href="{% url 'new' %}">New Post</a>
                 <a class="nav-link" href="{% url 'about' %}">About</a>
                 </div>
             </div>
